# Opera

./: .env.default  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml
b2s/: ast_extra.py  cli.py  const.py  expr_template.py  hole.py  input_config.py  lang.py  lang_interp.py  lang_parser.lark  lang_parser.py  lang_symb_exec.py  program_template.py  pyast_to_lang.py  rfs.py  sketch_types.py  stats.py  utils.py
b2s/converters/: __init__.py  ast_mutator.py  converter.py  gpt_converter.py  naive_nonnested_converter.py  naive_sketch_generator.py  obs_func_converter.py  observational_converter.py
b2s/converters/irs/: inference.py
b2s/solvers/: reduce.py  sketch.py
b2s/synthesizers/: enum_syn.py  qe_syn.py  qe_types.py  smart_expr_enumerator.py  template_enum_syn.py
benchmarks/nexmark/: q0.py  q1.py  q10.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q2.py  q20.py  q21.py  q22.py  q3.py  q4.py  q7.py  q9.py
benchmarks/stats/: coefficient_of_variation.py  covariance.py  diff.py  entropy.py  find_repeats.py  geometric_mean.py  geometric_std.py  harmonic_mean.py  kahan_mean.py  kahan_sum.py  kahan_variance.py  kstats.py  kstatvars.py  kurtosis.py  lag.py  linear_regression.py  log_sum_exp.py  mean.py  minmax.py  mode.py  nobs.py  pearson_correlation.py  power_mean.py  sem.py  skewness.py  sum.py  tmax.py  tmean.py  tmin.py  tsem.py  tstd.py  tvar.py  variance.py
evaluation/: .gitignore  eval.py  run.sh
evaluation/cvc5/: run.sh  run_nexmark.sh  timeout_runner
evaluation/opera/: CMakeLists.txt  run_benchmark.sh  run_opera.sh  run_opera_nodecomp.sh  run_opera_nosymb.sh
evaluation/sketch/: CMakeLists.txt  run.sh  run_nexmark.sh  timeout_runner
tests/: test_lang.py  test_lang_interp.py  test_pyast_to_lang.py
tests/converters/: test_ast_mutator.py
tests/solvers/: test_reduce.py
tests/synthesizers/: test_qe_syn.py
(+236 files in other folders)
