[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "benchmarks",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["F403", "F405"]
"b2s/lang_*.py" = ["F403", "F405"]

[tool.poetry]
name = "opera"
version = "0.4.0"
description = "experimental research prototype tool designed to convert offline algorithms into online algorithms"
authors = ["Ziteng Wang <z@wzt.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "b2s" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
hypothesis = "^6.75.1"
numpy = "^1.24.3"
scipy = "^1.10.1"
tqdm = "^4.65.0"
sympy = "^1.11.1"
lark = "^1.1.5"
python-dotenv = "^1.0.0"
attrs = "^23.1.0"
pexpect = "4.9.0"
frozendict = "^2.3.8"
joblib = "^1.3.2"
seaborn = "^0.11.2"
tikzplotlib = "^0.10.1"
matplotlib = "3.7.3"
pandas = "1.5.3"
tabulate = "^0.9.0"
openai = "^0.27.8"
z3-solver = "^4.12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"
ruff = "^0.0.287"
ipykernel = "^6.25.0"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
b2s = "b2s.cli:main"
opera = "b2s.cli:main"
eval = "evaluation.eval:main"
